--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
             if (!musicOn) {
                 try {
                     // FIXED: Use your local MP3 file name exactly
-                    music.src = "music.src = "happy-happy-band_aaj-dil-shayarana-arijit-singh-holiday-2014-[AudioTrimmer.com].mp3"; // ← Change this to your exact MP3 filename
+                    music.src = "music.src = "ab.mp3"; // ← Change this to your exact MP3 filename
                     // OR if your file is named differently: music.src = "Aaj Dil Shaayraana.mp3";
 
                     music.loop = true;
@@ -635,6 +635,7 @@
 </body>
 
 </html>
+
 
 
 
